--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -16,42 +16,37 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Login to DockerHub
+      - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and Push Docker Image
+      - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
-          context: .
-          file: ./Dockerfile
           push: true
           tags: koushik9806/wisecow:latest
 
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Setup kubectl
+      - name: Set up Kubernetes
         uses: azure/setup-kubectl@v1
         with:
           version: 'latest'
 
-      - name: Create .kube directory
-        run: mkdir -p $HOME/.kube
+      - name: Create kubeconfig
+        run: echo "${{ secrets.KUBECONFIG_CONTENT }}" | base64 --decode > $HOME/.kube/config
 
-      - name: Set up Kubeconfig
-        run: echo "${{ secrets.KUBECONFIG }}" | base64 --decode > $HOME/.kube/config
+      - name: Create Kubernetes Namespace
+        run: kubectl apply -f wisecow-namespace.yaml
+
+      - name: Create TLS Secret
+        run: |
+          echo "${{ secrets.TLS_CERT }}" | base64 --decode > tls.crt
+          echo "${{ secrets.TLS_KEY }}" | base64 --decode > tls.key
+          kubectl create secret tls wisecow-secret-tls --cert=tls.crt --key=tls.key --namespace=wisecow-namespace
 
       - name: Deploy to Kubernetes
         run: |
-          kubectl apply -f wisecow-namespace.yaml
           kubectl apply -f wisecow-deployment.yaml
           kubectl apply -f wisecow-service.yaml
           kubectl apply -f wisecow-ingress.yaml
