--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -28,6 +28,14 @@ jobs:
           push: true
           tags: koushik9806/wisecow:latest
 
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
       - name: Set up Kubernetes
         uses: azure/setup-kubectl@v1
         with:
@@ -40,7 +48,7 @@ jobs:
         run: echo "${{ secrets.KUBECONFIG_CONTENT }}" | base64 --decode > $HOME/.kube/config
 
       - name: Create Kubernetes Namespace
-        run: kubectl apply -f namespace.yaml
+        run: kubectl apply -f namespace.yaml --validate=false
 
       - name: Create TLS Secret
         run: |
