--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,6 +30,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
+    needs: build
 
     steps:
       - name: Checkout code
@@ -46,7 +47,7 @@ jobs:
       - name: Create kubeconfig
         run: echo "${{ secrets.KUBECONFIG_CONTENT }}" | base64 --decode > $HOME/.kube/config
 
-      - name: Create TLS Secret
+      - name: Decode and create TLS secret
         run: |
           echo "${{ secrets.TLS_CERT }}" | base64 --decode > tls.crt
           echo "${{ secrets.TLS_KEY }}" | base64 --decode > tls.key
